# cookiecutter-py-script

./: .gitignore  cookiecutter.json  pyproject.toml  tasks.py
hooks/: post_gen_project.py
src/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Makefile  mkdocs.yml  pyproject.toml  setup.bat  setup.sh  tasks.py
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/tests/: test_main.py
