[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
dependencies = [] # Add your script dependencies here
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "ruff==0.4.7",
    "bandit==1.7.9",
]

[tool.uv]
# Configuration for uv, if needed
# For now, we'll keep it simple

[tool.ruff]
line-length = 88
target-version = "py311"
# Linter rules to ignore, e.g., if you want to skip docstring checks
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"] # Common rules for errors, flakes, bugs, and imports

[tool.pytest.ini_options]
# Tell pytest where to find the source code
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.bandit]
exclude = ["tests"]
